test/regress/cov3-amount-bad-period-thousands.test
; Test error for incorrect use of thousand-mark period
; Covers amount.cc (incorrect thousand-mark period)

commodity 1.000,00 EUR

2024/01/01 Test
    Expenses:Food    1.23,45 EUR
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 7:
While parsing posting:
  Expenses:Food    1.23,45 EUR
                   ^^^^^^^^^^^
Error: Incorrect use of thousand-mark period
end test
